--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
 .App {
   text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
+  background: linear-gradient((Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)), (Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%)));
 }
 
 .App-logo {
