submit not done

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,16 @@
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 16px;
-  background: linear-gradient((Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)), (Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%)));
+  background: linear-gradient(Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%))
 }
 
+.arrow{
+  background-color: hsl(0, 93%, 68%);
+}
+
+.we{
+  color: hsl(0, 36%, 70%);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
